# Autonomous-Navigation-of-a-Multi-Trailer-SUV-System

./: readme.md
CAD/: Body1.SLDPRT  Chassis.SLDPRT  Front Axle.SLDPRT  Rear Axle.SLDPRT  SUV.SLDASM  Trailer Chassis.SLDPRT  Wheel Joint.SLDPRT  Wheel.SLDPRT
SUV/: CMakeLists.txt  package.xml
SUV/config/: control.yaml
SUV/launch/: display.launch.py  gazebo.launch.py  gazebo_teleop.launch.py  spawn_robot_ros2.launch.py  spawn_robot_ros2_teleop.launch.py
SUV/meshes/: FrontLeftSteer.STL  FrontLeftWheel.STL  FrontRightSteer.STL  FrontRightWheel.STL  Hitch1.STL  Hitch2.STL  LeftTrailer1.STL  LeftTrailer2.STL  Lidar.STL  RearLeftWheel.STL  RearRightWheel.STL  RightTrailer1.STL  RightTrailer2.STL  base_link.STL
SUV/urdf/: SUV.csv  SUV.urdf  SUV.urdf.xacro
SUV/worlds/: competition_arena.world  empty_world.world
closed_loop_controller/: CMakeLists.txt  compile_commands.json  package.xml
closed_loop_controller/src/: controller.cpp
falconsim/: autonomous.py  file_given_for_autonomous.py  keyboard_teleop.py  keyboard_teleop_autonomous.py  suv.py
fbx/: reartrailer.fbx  suv.fbx  trailer.fbx
suv_teleop/: package.xml  setup.cfg  setup.py
suv_teleop/suv_teleop/: keyboard_teleop.py
