<?xml version="1.0"?>
<package format="3">
  <name>SUV</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kalavrim@gmail.com">matt</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>xacro</build_depend>

  <depend>gazebo_ros_pkgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ros2_control</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>

